Olympus/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Omitted</fullName>
        </values>
        <values>
            <fullName>Pipeline</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HAFE_Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>HSFE_Specialty__c</controllingField>
            <picklistValues>
                <fullName>Pentax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Dimension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medivators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMS (3rd party scopes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndochoiceFusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stryker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wolf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intuitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covidien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Capital_Amount__c</fullName>
        <label>Capital Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSFE_Combination_Key__c</fullName>
        <formula>AccountId +  TEXT(HSFE_Specialty__c) + TEXT(HSFE_Sub_Specialty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combination Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Competitive_Probability__c</fullName>
        <label>Competitive Probability</label>
        <picklist>
            <controllingField>HSFE_Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Prefer Competition, No discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer Competition, Will discuss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers Olympus, competitive situation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Prefers Olympus, no competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Contract_Type__c</fullName>
        <label>Contract</label>
        <picklist>
            <controllingField>HSFE_Product_Category__c</controllingField>
            <picklistValues>
                <fullName>On Contract with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not on Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Contract with Olympus and Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive Contract with Olympus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Disposable_Amount__c</fullName>
        <label>Disposable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSFE_Funding_Probability__c</fullName>
        <label>Funding Probability</label>
        <picklist>
            <controllingField>HSFE_Product_Category__c</controllingField>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied for funds Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied for funds External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied for funds External-Olympus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funds Approved/Awaiting release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Funded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Lead_Origin__c</fullName>
        <label>Lead Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSG Portal(Website)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIS Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Generated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Lead_Sub_Origin__c</fullName>
        <label>Lead Sub-Origin</label>
        <picklist>
            <picklistValues>
                <fullName>AAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AORN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Filter Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the validation rule, Whenever the opportunity is closed won or lost it cannot be edited.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Lost_Reason_Description__c</fullName>
        <label>Lost Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Price not competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No business need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product specifications unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Opportunity_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Probability__c</fullName>
        <formula>if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Closed Won&apos;),100*0.01 ,
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Closed Lost&apos;),00,
if( (ISPICKVAL(HSFE_Product_Category__c,&apos;Capital&apos;) || (ISPICKVAL(HSFE_Product_Category__c,&apos;Service&apos;))),
(((
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Universe&apos;),10, 
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Above Funnel&apos;),25,
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;In Funnel&apos;),60,
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Best Few&apos;),85, 
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Verbally Accepted&apos;), 99 ,00))))) 
+
if(ISPICKVAL(HSFE_Funding_Probability__c,&apos;No Budget&apos;),0, 
if(ISPICKVAL(HSFE_Funding_Probability__c,&apos;Applied for funds Internal&apos;),25,
if(ISPICKVAL(HSFE_Funding_Probability__c,&apos;Applied for funds External&apos;),25,
if(ISPICKVAL(HSFE_Funding_Probability__c,&apos;Applied for funds External-Olympus&apos;),50, 
if(ISPICKVAL(HSFE_Funding_Probability__c,&apos;Funds Approved/Awaiting release&apos;),85, 
if(ISPICKVAL(HSFE_Funding_Probability__c,&apos;Fully Funded&apos;), 99 ,00))))))
+ 
(if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Prefer Competition, No discussion&apos;),0, 
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Prefer Competition, Will discuss&apos;),25,
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;No Preference&apos;),50, 
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Prefers Olympus, competitive situation&apos;),75, 
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Fully Prefers Olympus, no competition&apos;),95,0))))))
)
/3)*0.01),
if(ISPICKVAL(HSFE_Product_Category__c,&apos;Disposable&apos;),
(((
(if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Universe&apos;),10,
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Above Funnel&apos;),25,
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;In Funnel&apos;),60,
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Best Few&apos;),85, 
if(ISPICKVAL(HSFE_Sales_Stage__c,&apos;Verbally Accepted&apos;),99,00))))))
+
(if(ISPICKVAL(HSFE_Contract_Type__c,&apos;On Contract with Competitor&apos;),0, 
if(ISPICKVAL(HSFE_Contract_Type__c,&apos;Not on Contract&apos;),50, 
if(ISPICKVAL(HSFE_Contract_Type__c,&apos;On Contract with Olympus and Competitor&apos;),85, 
if(ISPICKVAL(HSFE_Contract_Type__c,&apos;Exclusive Contract with Olympus&apos;), 99 ,00)))))
+
(if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Prefer Competition, No discussion&apos;),0, 
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Prefer Competition, Will discuss&apos;),25,
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;No Preference&apos;),50, 
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Prefers Olympus, competitive situation&apos;),75, 
if(ISPICKVAL(HSFE_Competitive_Probability__c,&apos;Fully Prefers Olympus, no competition&apos;),95,0))))))
)/3)*0.01),0)
)
)
)</formula>
        <label>Probability (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HSFE_Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Capital</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bulk</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Run Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Quote_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Run_Rate_Term_Months__c</fullName>
        <label>Run Rate Term (Months)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <controllingField>HSFE_Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Universe</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Above Funnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Funnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Few</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbally Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Service_Amount__c</fullName>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HSFE_Solution_Category__c</fullName>
        <label>Solution Category</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Strategy__c</fullName>
        <label>Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Specialty__c</fullName>
        <label>Sub Specialty</label>
        <picklist>
            <controllingField>HSFE_Specialty__c</controllingField>
            <picklistValues>
                <fullName>Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology/Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndoCapsule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical AVI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>HSEF_Territory__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Product_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSFE_Sales_Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>My_ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>My_NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My New This Week</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>HSFE_Sales_Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities_Capital</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>HSFE_Product_Category__c</field>
            <operation>equals</operation>
            <value>Capital</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My Open Opportunities--Capital</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities_Disposable</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>HSFE_Product_Category__c</field>
            <operation>equals</operation>
            <value>Disposable</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My Open Opportunities--Disposable</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>HSFE_Sales_Stage__c</columns>
        <columns>HSFE_Funding_Probability__c</columns>
        <columns>HSFE_Competitive_Probability__c</columns>
        <columns>HSFE_Contract_Type__c</columns>
        <columns>HSFE_Strategy__c</columns>
        <columns>HSFE_Probability__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>HSFE_Capital_Amount__c</columns>
        <columns>HSFE_Disposable_Amount__c</columns>
        <columns>HSFE_Service_Amount__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Customer</value>
        </filters>
        <label>My Won</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Read_Only</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Customer Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>FIT</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>FIT</label>
    </recordTypes>
</CustomObject>